--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       "
     >
       <p>我的网站</p>
-      <a href="http://yuhuayun.com/">友情链接</a>
+      <a href="https://huaxia2023.github.io/Re01-one/">友情链接</a>
     </div>
   </body>
 </html>
